fixed issue of bg resizing on mobile browser

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@ body {
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 100vh;
+    min-height: 100%;
 }
 
 header {
